--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   display: flex;
   flex-direction: column;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .img {
   width: 500px;
@@ -55,4 +56,40 @@ ul li a {
   color: #f9faf8;
   border-radius: 10px;
   padding: 5px 15px;
+}
+.body {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  padding-bottom: 70px;
+}
+.body_first {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #1f2937;
+  font-size: 36px;
+  font-weight: 900;
+  padding: 30px;
+}
+.body_second {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 30px;
+}
+.body img {
+  width: 190px;
+  height: 190px;
+  border-radius: 20px;
+  border: 5px solid #3498db;
+}
+
+.info p {
+  width: 185px;
+  font-size: 16px;
+  font-weight: light;
+  color: #666666;
+  margin-left: 8px;
+  margin-top: 8px;
 }
